--- a/rebsta-core/pom.xml
+++ b/rebsta-core/pom.xml
@@ -45,7 +45,7 @@
     <parent>
         <artifactId>rebsta</artifactId>
         <groupId>org.abego.rebsta</groupId>
-        <version>0.9.3</version>
+        <version>0.9.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>rebsta-core</artifactId>
