--- a/rebsta-cli/pom.xml
+++ b/rebsta-cli/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <artifactId>rebsta</artifactId>
         <groupId>org.abego.rebsta</groupId>
-        <version>0.9.4</version>
+        <version>0.9.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>rebsta-cli</artifactId>
